--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <ul>
-  {{#each noteslist}}
-    <li>{{id}}:
-      <a>{{title}}</a>
+  {{#each notesList}}
+    <li>{{ id }}:
+      <a>{{ content }}</a>
     </li>
   {{/each}}
 </ul>
