feat: edit note.

--- a/views/noteview.hbs
+++ b/views/noteview.hbs
@@ -8,8 +8,8 @@
 {{#if id}}
   <hr />
   <p>
-    <a href="/notes/delete?key={{notekey}}">Delete</a>
+    <a href="/notes/delete?id={{id}}">Delete</a>
     |
-    <a href="/notes/edit?key={{notekey}}">Edit</a>
+    <a href="/notes/edit?id={{id}}">Edit</a>
   </p>
 {{/if}}
