--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,10 +2,18 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/assets/stylesheets/style.css"/>
+    <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css"/>
   </head>
-  <body>
-    {{> header }}
-    {{{body}}}
+  <body class="layout">
+    <div class="layout-wrapper">
+      {{> header }}
+      {{{body}}}
+    </div>
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="/assets/vendor/popper.js/popper.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
