--- a/views/noteview.hbs
+++ b/views/noteview.hbs
@@ -1,15 +1,26 @@
-{{#if note}}
-  <h3>{{note.header}}</h3>
-{{/if}}
-{{#if note}}
-  <p>{{note.content}}</p>
-{{/if}}
-<p>Note Id: {{id}}</p>
-{{#if id}}
-  <hr />
-  <p>
-    <a href="/notes/delete?id={{id}}">Delete</a>
-    |
-    <a href="/notes/edit?id={{id}}">Edit</a>
-  </p>
-{{/if}}
+<div class="container-fluid">
+  <div class="row"><div class="col-xs-12">
+      {{#if note}}<h3>{{note.header}}</h3>{{/if}}
+      {{#if note}}<p>{{note.content}}</p>{{/if}}
+      <p>Note ID: {{id}}</p>
+    </div></div>
+  {{#if id}}
+    <div class="row"><div class="col-xs-12">
+        <div class="btn-group">
+          <a
+            class="btn btn-outline-dark"
+            href="/notes/delete?id={{id}}"
+            role="button"
+          >
+            Delete
+          </a>
+          <a
+            class="btn btn-outline-dark"
+            href="/notes/edit?id={{id}}"
+            role="button"
+          >
+            Edit
+          </a>
+        </div>
+  {{/if}}
+</div>
