--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,9 +1,24 @@
-<header>
-  <h1>{{title}}</h1>
-  <div class="navbar">
-    <p>
-      <a href="/">Home</a>
-      <a href="/notes/add">Add note</a>
-    </p>
-  </div>
+<header class="page-header">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">
+      <i data-feather="home"></i>
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <span class="navbar-text text-dark col">{{header}}</span>
+      <a class="nav-item nav-link btn btn-dark col-auto" href="/notes/add">
+        Add Note
+      </a>
+    </div>
+  </nav>
 </header>
